aligned content on all pages relative to one point and fixed widths on smaller tables

--- a/view/src/main/webapp/css/logiweb.css
+++ b/view/src/main/webapp/css/logiweb.css
@@ -107,3 +107,12 @@ div.validationError {
     margin: 5px 0 0 5px;
 }
 
+/* Setting width of individual tables */
+#cargoStatesTable, #ordersStateTable {
+    width: 34%;
+}
+
+#getJobInfoForm {
+    width: 28%
+}
+
